add_library(SOURCE 
            core/EntityManager.cpp
            core/EntityManager.hpp
            core/Game.h
            core/Game.cpp
            core/World.cpp
            core/World.h
            core/SceneNode.cpp
            core/SceneNode.h     
            Components/C_Body.hpp 
            Systems/BaseSystem.hpp
            Systems/BaseSystem.cpp
            Systems/CollisionSystem.hpp
            Systems/CollisionSystem.cpp
            States/State.h
            States/StateStack.h
            States/State.cpp
            States/StateStack.cpp
            States/GameState.h
            States/GameState.cpp
            States/StateIdentifiers.h 
            Utils/ResourceHolder.h
            Utils/Utility.hpp
            Utils/Utility.cpp 
            Utils/Math.hpp          
            Utils/Context.hpp 
            Systems/MoveSystem.hpp 
            Systems/MoveSystem.cpp 
            Systems/RenderSystem.hpp 
            Systems/RenderSystem.cpp)

target_link_libraries(SOURCE ${SOURCE})